--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/env", "@babel/react"],
+  "presets": ["babel-preset-env", "babel-preset-react"],
     "plugins": [
       "transform-class-properties",
       "transform-object-rest-spread"
