--- a/package.json
+++ b/package.json
@@ -43,14 +43,13 @@
     "style-loader": "^1.2.1",
     "uuid": "^8.2.0",
     "validator": "^13.1.1",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^3.11.0",
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^7.1.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
-  }
+  },
+  "devDependencies": {}
 }
